# Bulletly

./: .gitignore  README.md  import.py  pyproject.toml  setup.cfg
.github/: README.md
.github/workflows/: ci.yml  publish.yml
bulletly/: __init__.py  __main__.py  main.py  prompts.py
resume_bullet_rewriter/: __init__.py  __main__.py
src/resume_bullet_rewriter/: __init__.py  demo.py  main.py  schema.py  scoring.py  utils.py
tests/: test_basic.py
