[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bulletly"
version = "0.1.0"
description = "Interactive CLI tool for analyzing and improving resume bullets"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "groq>=0.4.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/aveeks-dev/Bulletly"
Repository = "https://github.com/aveeks-dev/Bulletly.git"

[project.scripts]
bulletly = "bulletly.main:main"

[tool.setuptools]
packages = ["bulletly"]